<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:showIn="navigation_view">


    <item
        android:id="@+id/nav_myprofile"
        android:title="@string/myprofile"
        android:icon="@drawable/ic_baseline_account_circle_24"
        app:showAsAction="withText"/>

    <item
        android:id="@+id/nav_menu"
        android:checkable="false"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_menu_book_24"
        android:title="@string/menu"
        app:showAsAction="withText"/>


    <item
        android:id="@+id/nav_Reservation"
        android:title="@string/Reservation"
        android:icon="@drawable/ic_baseline_table_restaurant_24"
        app:showAsAction="withText"/>

    <item
        android:id="@+id/nav_delivery"
        android:title="@string/delivery"
        android:icon="@drawable/ic_baseline_delivery_dining_24"
        app:showAsAction="withText"/>

    <item
        android:id="@+id/nav_salir"
        android:title="@string/logOut"
        android:icon="@drawable/ic_baseline_logout_24"
        app:showAsAction="withText"/>



</menu>