<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    tools:context=".RegisterActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EE467BDE"
        android:elevation="2dp"
        app:title="@string/create_your_acccount"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="@android:color/white" />

    <ImageView
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:src="@drawable/restaurante"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:textStyle="italic"
        android:textColorHint="@color/black"
        android:layout_marginTop="5dp">
        <EditText
            android:id="@+id/edName"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lastname"
        android:textStyle="italic"
        android:textColorHint="@color/black"
        android:layout_marginTop="10dp">
        <EditText
            android:id="@+id/edLastName"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nit"
        android:textStyle="italic"
        android:textColorHint="@color/black"
        android:layout_marginTop="5dp">
        <EditText
            android:id="@+id/edNit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Email"
        android:textStyle="italic"
        android:textColorHint="@color/black"
        android:layout_marginTop="5dp">
        <EditText
            android:id="@+id/edEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Resgitro_password"
        android:textStyle="italic"
        android:textColorHint="@color/black"
        android:layout_marginTop="5dp"
        app:endIconMode="password_toggle">
        <EditText
            android:id="@+id/Registerpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Telephone"
        android:textStyle="italic"
        android:textColorHint="@color/black"
        android:layout_marginTop="5dp">
        <EditText
            android:id="@+id/ed_Tel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"/>

    </com.google.android.material.textfield.TextInputLayout>


    <CheckBox
        android:id="@+id/chb_policy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="privacy policy"
        android:textSize="15sp"
        android:textColorHint="@color/black"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/btn_save_Register"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#6C80E4"
        android:onClick="onRegister"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_gravity="center"/>


</LinearLayout>