<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/authLayout"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:titleTextColor="@android:color/white"
        android:background="#EE467BDE"
        android:elevation="4dp"
        android:padding="4dp"
        app:title="@string/Restaurante"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgViewSeries"
            android:layout_width="157dp"
            android:layout_height="126dp"
            android:layout_gravity="center"
            android:src="@drawable/restaurante" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_vertical"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_username"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/ed_textUsername"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:hint="correo@gmail.com"
            android:textColor="@color/black" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle"
            android:textColorHint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:textColor="@color/black"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            android:background="#6C80E4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:onClick="onLogin"/>

        <Button
            android:id="@+id/btn_Register"
            android:background="#6C80E4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:layout_marginTop="15dp"
            android:onClick="onRegister"/>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_emaillogin"
            android:layout_width="190dp"
            android:layout_height="40sp"
            android:layout_gravity="left"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:background="#6C80E4"
            android:onClick="onLogin_email"
            android:text="Login email"
            android:textColor="@color/white"
            android:textSize="12sp" />
        <Button
            android:id="@+id/btn_email"
            android:layout_width="190dp"
            android:layout_height="40sp"
            android:layout_gravity="right"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="11dp"
            android:background="#6C80E4"
            android:onClick="onRegistrer_email"
            android:text="Registrer email"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_Forgotpwd"
            android:background="#6C80E4"
            android:layout_width="190sp"
            android:layout_height="40sp"
            android:text="@string/text_btnforgotpwd"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="12dp"
            android:onClick="onForgotpwd"/>
        <Button
            android:id="@+id/btn_Forgotuser"
            android:background="#6C80E4"
            android:layout_width="190dp"
            android:layout_height="40sp"
            android:text="@string/text_btnforgotuser"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="12dp"
            android:onClick="onForgotusr"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="169dp"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal">

        <com.google.android.gms.common.SignInButton
            android:id="@+id/btn_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

        <ImageButton
            android:id="@+id/btn_facebook"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:onClick="onLoginFacebook"
            android:backgroundTint="#FAFAFA"
            android:src="@drawable/facebook"/>

        <ImageButton
            android:id="@+id/btn_instagram"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:onClick="onLoginInstagram"
            android:backgroundTint="#FAFAFA"
            android:src="@drawable/instagram"/>


    </LinearLayout>

</LinearLayout>
