<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActivityForgotuser"
    android:layout_margin="15dp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:titleTextColor="@android:color/white"
        android:background="#EE467BDE"
        android:elevation="4dp"
        android:padding="4dp"
        app:title="@string/app_name"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgViewSeries"
            android:layout_width="197dp"
            android:layout_height="156dp"
            android:layout_gravity="center"
            android:src="@drawable/restaurante" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_forgotpwd"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/ed_textUsername"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:hint="correo@gmail.com"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btn_sendcode"
            android:background="#6C80E4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_send"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:layout_marginTop="25dp"
            android:onClick="onSenduser"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Please enter the code that has been sent to your mail"
            android:textAlignment="center"
            android:layout_marginTop="15sp"
            android:textColor="@color/black"
            android:textSize="22sp" />
    </LinearLayout>

</LinearLayout>