<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".WelcomeActivity"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#EE467BDE"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/app_name"
            app:titleTextColor="@android:color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3.5"
            android:orientation="vertical"
            android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/text_Welcome"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/Restaurante"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"/>

                <ImageView
                    android:id="@+id/imagen_bienvenida"
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/restaurant_c" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3.5"
            android:orientation="vertical"
            android:layout_margin="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:text="@string/text_Introduction"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="340dp"
                    android:layout_height="172dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="1dp"
                    android:justificationMode="inter_word"
                    android:text="@string/explain"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            <TextView
                android:id="@+id/textemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Welcome1"
                android:textSize="18sp"
                android:textColor="#009688"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/textprovedor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Welcome2"
                android:textSize="18sp"
                android:textColor="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/bnListaProductosActWel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Lista de Productos"
                android:textSize="15sp"
                android:textStyle="bold"
                android:backgroundTint="#42358A"
                android:layout_marginRight="5dp"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/btnLogOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cerrar sesión"
                android:layout_gravity="center"/>

        </LinearLayout>
    </LinearLayout>

   <!-- <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:srcCompat="@drawable/ic_baseline_dehaze_24" />-->

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:backgroundTint="#F47D95C9"
        android:src="@drawable/ic_baseline_add_24"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>