<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".DeliveryFragment"
    android:orientation="vertical"
    android:background="#FBFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_marginTop="100dp"
            android:layout_gravity="center"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:src="@drawable/restaurante"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:textStyle="italic"
            android:textColorHint="@color/black"
            android:layout_marginTop="20dp">
            <EditText
                android:id="@+id/edName"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Address"
            android:textStyle="italic"
            android:textColorHint="@color/black"
            android:layout_marginTop="10dp">
            <EditText
                android:id="@+id/edDirección"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPostalAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Telephone"
            android:textStyle="italic"
            android:textColorHint="@color/black"
            android:layout_marginTop="10dp">
            <EditText
                android:id="@+id/ed_Tel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Total"
            android:textStyle="italic"
            android:textColorHint="@color/black"
            android:layout_marginTop="10dp">
            <EditText
                android:id="@+id/ed_saldo_pagar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Metodo de Pago"
            android:textStyle="italic"
            android:textColorHint="@color/black"
            android:layout_marginTop="10dp">
            <EditText
                android:id="@+id/ed_Pago"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_domicilios"
            android:layout_width="223dp"
            android:layout_height="67dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:backgroundTint="#E8C597"
            android:clickable="true"
            android:text="Haz tu Pedido"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </LinearLayout>


</FrameLayout>